src/test/julian/Parsing/SyntaxError/prog_5.jul
import ModuleSys.SynD;

MyClass mc = new MyClass();